--- a/vista/css/ropa.css
+++ b/vista/css/ropa.css
@@ -8,18 +8,25 @@ h1{
     font-size: 100px;
     }
     
-    #inicio{
-    color : black;
-    }
-    
+    .inicioSesion{
+        display: flex;
+        align-items: center;
+        height: 100%;
+        justify-content: center;
+            a{
+                color : black;
+            }
+        }
     .barra{
         background-color: #000000;
         font-size: large;
         display: flex;
         justify-content: space-around;
+        a{
+            color: white;
+        }
     }
     .row{
-        border: 1px solid slateblue;
         margin-bottom: 2%;
     }
     .introduccion{
@@ -28,12 +35,24 @@ h1{
         justify-content: center;
         align-items: center;
     }
-    
-    #vistas{
-        color: white;
+    .card{
+        width: 80%;
+        height: 100%;
+        img{
+           height: 12rem;
+        }
     }
-
     #banner{
         background-color: black;
         color: white;
+    }
+    button{
+        background-color: black;
+        color: white;
+        border-radius: 10px;
+    }
+    button:hover{
+        cursor: pointer;
+        background-color: tomato;
+        border-color: rgb(248, 78, 48);
     }
