--- a/vista/css/accesorios.css
+++ b/vista/css/accesorios.css
@@ -8,18 +8,51 @@ h1{
     font-size: 100px;
     }
     
-    #inicio{
-    color : black;
-    }
+    .inicioSesion{
+        display: flex;
+        align-items: center;
+        height: 100%;
+        justify-content: center;
+            a{
+                color : black;
+            }
+        }
     
-    #barra{
-        background-color: blue;
-        height: 45px;
-    }
-    
-    #vistas{
-        color: white;
-    }
+        .barra{
+            background-color: #000000;
+            font-size: large;
+            display: flex;
+            justify-content: space-around;
+            a{
+                color: white;
+            }
+        }
+        .row{
+            margin-bottom: 2%;
+        }
+        .introduccion{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        .card{
+            width: 80%;
+            height: 100%;
+            img{
+               height: 12rem;
+            }
+        }
+        button{
+            background-color: black;
+            color: white;
+            border-radius: 10px;
+        }
+        button:hover{
+            cursor: pointer;
+            background-color: tomato;
+            border-color: rgb(248, 78, 48);
+        }
 
     #banner{
         background-color: black;
