--- a/vista/css/carrito.css
+++ b/vista/css/carrito.css
@@ -7,21 +7,46 @@ h1{
     font-family:titulo;
     font-size: 100px;
     }
+    .inicioSesion{
+        display: flex;
+        align-items: center;
+        height: 100%;
+        justify-content: center;
+            a{
+                color : black;
+            }
+        }
     
-    #inicio{
-    color : black;
-    }
-    
-    #barra{
-        background-color: blue;
-        height: 45px;
-    }
-    
-    #vistas{
-        color: white;
-    }
-
+        .barra{
+            background-color: #000000;
+            font-size: large;
+            display: flex;
+            justify-content: space-around;
+            a{
+                color: white;
+            }
+        }
+        .row{
+            margin-bottom: 2%;
+        }
+        .introduccion{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        button{
+            background-color: black;
+            color: white;
+            border-radius: 10px;
+        }
+        button:hover{
+            cursor: pointer;
+            background-color: tomato;
+            border-color: rgb(248, 78, 48);
+        }
     #banner{
         background-color: black;
         color: white;
+        margin-top: 14%;
     }
