--- a/vista/css/index.css
+++ b/vista/css/index.css
@@ -1,57 +1,89 @@
-@font-face{
+ @font-face{
     font-family: titulo;
-    src: url(../../includes/tipo/Sweet\ Hipster.ttf)
+    src: url(../../includes/tipo/Sweet\ Hipster.ttf);
 }
+@font-face {
+    font-family: market;
+    src: url(../../includes/tipo/ChelseaMarket-Regular.ttf);
+}
+
+.col-md-11{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.bannerNav{
+    display: flex;
+    justify-content: flex-start;
+    align-items: end;
+}
+.bannerNav img{
+    width: 15%;
+    height: fit-content;
+}
+.inicioSesion{
+    display: flex;
+    justify-content: end;
+    flex-direction: column;
+    align-items: center;
+}
+.inicioSesion a{
+   color: #000000;
+}
+.inicioSesion img{
+    width: 10%;
+    height: fit-content;
+}
+
 h1{
 font-family:titulo;
 font-size: 100px;
 }
-
-
-.row{
-    margin-bottom: 4%;
+p{
+    font-family: market;
 }
-
-.inicioSesion{
-display: flex;
-align-items: center;
-height: 100%;
-justify-content: center;
-    a{
-        color : black;
-    }
+h5{
+    font-family: market; 
 }
-
-.barra{
-    background-color: #000000;
-    font-size: large;
+.footer{
+    background-color: #343a40 ;
+    color: white;
     display: flex;
-    justify-content: space-around;
+} 
+.footer ul{
+    list-style: none;
+
 }
-.carousel{
-    img{
-        height: 37.3rem;
+.row{
+    margin: 5%;
+}
+
+
+@media (max-width: 768px){
+
+    h1{
+        display: none;
+    }
+    .col-md-11{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    .bannerNav{
+        width: 70%;
+    }
+    .bannerNav img {
+        width: 20%;
+    }
+    .inicioSesion{
+        display: flex;
+        align-items: center;
+    }
+    .inicioSesion a{
+        color: #000000;
+    }
+    .card-body{
+        background-color: #000000;
+        color: #ffffff;
     }
 }
-.card{
-    width: 80%;
-    height: 100%;
-    img{
-       height: 12rem;
-    }
-}
-#vistas{
-    color: white;
-}
-#carouselExampleControls{
-
-    width: 1100px;
-    height: 600px;
-}
-
-
-#banner{
-    background-color: black;
-    color: white;
-}
-
