--- a/vista/css/carrito.css
+++ b/vista/css/carrito.css
@@ -1,61 +1,92 @@
-@font-face{
-    font-family: titulo;
-    src: url(../../includes/tipo/Sweet\ Hipster.ttf);
+@font-face {
+  font-family: titulo;
+  src: url(../../includes/tipo/Sweet\ Hipster.ttf);
+}
+@font-face {
+  font-family: market;
+  src: url(../../includes/tipo/ChelseaMarket-Regular.ttf);
 }
 
-h1{
-    font-family:titulo;
-    font-size: 100px;
-    }
+h1 {
+  font-family: titulo;
+  font-size: 100px;
+}
 
-    .col-md-11{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .bannerNav{
-        display: flex;
-        justify-content: flex-start;
-        align-items: end;
-    }
-    .bannerNav img{
-        width: 15%;
-        height: fit-content;
-    }
-    .inicioSesion{
-        display: flex;
-        justify-content: end;
-        flex-direction: column;
-        align-items: center;
-    }
-    .inicioSesion a{
-       color: #000000;
-    }
-    .inicioSesion img{
-        width: 10%;
-        height: fit-content;
-    }
-        .row{
-            margin-bottom: 2%;
-        }
-        .introduccion{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-        button{
-            background-color: black;
-            color: white;
-            border-radius: 10px;
-        }
-        button:hover{
-            cursor: pointer;
-            background-color: tomato;
-            border-color: rgb(248, 78, 48);
-        }
-    #banner{
-        background-color: black;
-        color: white;
-        margin-top: 14%;
-    }
+.col-md-11 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.bannerNav {
+  display: flex;
+  justify-content: flex-start;
+  align-items: end;
+}
+.bannerNav img {
+  width: 15%;
+  height: fit-content;
+}
+.inicioSesion {
+  display: flex;
+  justify-content: end;
+  flex-direction: column;
+  align-items: center;
+}
+.inicioSesion a {
+  color: #000000;
+}
+.inicioSesion img {
+  width: 10%;
+  height: fit-content;
+}
+.row {
+  margin-bottom: 5%;
+}
+.introduccion {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: market;
+}
+button {
+  background-color: black;
+  color: white;
+  border-radius: 10px;
+}
+button:hover {
+  cursor: pointer;
+  background-color: tomato;
+  border-color: rgb(248, 78, 48);
+}
+.footer {
+  background-color: #343a40;
+  color: white;
+  display: flex;
+}
+.footer ul {
+  list-style: none;
+}
+@media (max-width: 768px) {
+  h1 {
+    display: none;
+  }
+  .col-md-11 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  .bannerNav {
+    width: 70%;
+  }
+  .bannerNav img {
+    width: 20%;
+  }
+  .inicioSesion {
+    display: flex;
+    align-items: center;
+  }
+  .inicioSesion a {
+    color: #000000;
+  }
+}
