--- a/vista/css/ropa.css
+++ b/vista/css/ropa.css
@@ -2,6 +2,10 @@
     font-family: titulo;
     src: url(../../includes/tipo/Sweet\ Hipster.ttf);
 }
+@font-face {
+    font-family: market;
+    src: url(../../includes/tipo/ChelseaMarket-Regular.ttf);
+}
 
 h1{
     font-family:titulo;
@@ -9,60 +13,95 @@ h1{
     }
     
 
+h5{
+    font-family: market;
+    font-size: x-large;
+    text-decoration-line: underline;
+}
+.col-md-11{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.bannerNav{
+    display: flex;
+    justify-content: flex-start;
+    align-items: end;
+}
+.bannerNav img{
+    width: 15%;
+    height: fit-content;
+}
+.inicioSesion{
+    display: flex;
+    justify-content: end;
+    flex-direction: column;
+    align-items: center;
+}
+.inicioSesion a{
+    color: #000000;
+}
+.inicioSesion img{
+    width: 10%;
+    height: fit-content;
+}
+.row{
+    margin-bottom: 5%;
+}
+.introduccion{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: market;
+}
+.card{
+    width: 80%;
+    height: 100%;
+    background-color:#cbcaca ;
+    font-family: market;
+}
+.card img{
+    width: 100%;
+    height: 15rem;
+}
+.footer{
+    background-color: #343a40 ;
+    color: white;
+    display: flex;
+} 
+.footer ul{
+    list-style: none;
+}
+button{
+    border-radius: 10px;
+}
+
+@media (max-width: 768px){
+
+    h1{
+        display: none;
+    }
     .col-md-11{
         display: flex;
-        justify-content: center;
-        align-items: center;
+        flex-direction: row;
+        justify-content: space-around;
     }
     .bannerNav{
-        display: flex;
-        justify-content: flex-start;
-        align-items: end;
+        width: 70%;
     }
-    .bannerNav img{
-        width: 15%;
-        height: fit-content;
+    .bannerNav img {
+        width: 20%;
     }
     .inicioSesion{
         display: flex;
-        justify-content: end;
-        flex-direction: column;
         align-items: center;
     }
     .inicioSesion a{
-       color: #000000;
+        color: #000000;
     }
-    .inicioSesion img{
-        width: 10%;
-        height: fit-content;
+    .card-body{
+        background-color: #cbcaca ;
+        color: #ffffff;
     }
-    .row{
-        margin-bottom: 2%;
-    }
-    .introduccion{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    .card{
-        width: 80%;
-        height: 100%;
-        img{
-           height: 12rem;
-        }
-    }
-    #banner{
-        background-color: black;
-        color: white;
-    }
-    button{
-        background-color: black;
-        color: white;
-        border-radius: 10px;
-    }
-    button:hover{
-        cursor: pointer;
-        background-color: tomato;
-        border-color: rgb(248, 78, 48);
-    }
+}
